# docstring-json

./: README.md  SPEC.md  pyproject.toml  setup.py
.github/workflows/: build.yml  security.yml  tests.yml
docstring_json/: __init__.py  _cython_backend.c  _cython_backend.pyx  _python_backend.py  errors.py
jsdoc/: __init__.py  _cython_backend.pyx  _python_backend.py
tests/: test_djson.py  test_jsdoc.py
