[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docstring-json"
version = "0.2.1"
description = "A Python library for parsing JSON with comments, unquoted keys, and docstrings (.djson files)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "JackBinary", email = "jmg.exe@gmail.com"},
]
maintainers = [
    {name = "JackBinary", email = "jmg.exe@gmail.com"},
]
keywords = ["json", "comments", "parser", "djson", "docstring-json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JackBinary/docstring-json"
Repository = "https://github.com/JackBinary/docstring-json"
Issues = "https://github.com/JackBinary/docstring-json/issues"

[tool.setuptools]
packages = ["docstring_json"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
docstring_json = ["*.djson", "*.pyx"]